// protoc --go_out=./ protocol.proto

syntax = "proto3";
package tutorial;
option go_package = "proto.main"; 

message Request {
  string username = 1;
  string nickname = 2;
  string password = 3;

  enum RequestType {
    REQUEST_NONE = 0;
    AUTH = 1;
    EDIT_NICKNAME = 2;
  }

  enum ResponseType {
    RESPONSE_NONE = 0;
    SUCCESS = 1;
    FAILED = 2;
  }

  RequestType requestType = 4; 
  ResponseType responseType = 5;
}
